# spaceheater

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  archive_logs.sh  benchmark_host.sh  fly.toml  geekbench_claim.url  install.sh
benches/: scoring.rs  spaceheater.rs  spaceheater_forking.rs  winter.rs
measurements/: 00_enemies.gp  01_enemies.gp  02_enemies.gp  03_enemies.gp  04_enemies.gp  05_enemies.gp  06_enemies.gp  07_enemies.gp
src/: gamedata.rs  gamelogger.rs  lib.rs  main.rs  protocol.rs  util.rs
src/logic/: board.rs  game.rs  mod.rs  point.rs  search.rs  snake.rs  test.rs  voronoi.rs
src/logic/scoring/: floodfill.rs  mod.rs  pruning.rs  tournament.rs  voronoi.rs  winter.rs
src/logic/scoring/winter/: floodfill.rs  mod.rs
src/logic/tests/: board.rs  floodfill.rs  mod.rs  snail_mode.rs  spaceheater.rs  voronoi.rs
src/logic/tests/data/: head_to_head_equal_length.json  self_collision_wrapped.json  snail_mode_after.json  snail_mode_before.json  wrapped_rivers_and_lakes_opening.json  you_eat_food.json
src/snakes/: mod.rs  simple.rs  solid.rs  spaceheater.rs
src/snakes/spaceheater/: game_solver.rs  mod.rs  scorecard.rs
src/snakes/spaceheater2/: mod.rs  scores.rs  solve.rs  util.rs
src/snakes/spaceheater3/: alphabeta.rs  background.rs  concurrent.rs  max.rs  min.rs  mod.rs  parallel.rs  solve.rs  util.rs
src/snakes/suspicious_salami/: mod.rs
src/util/: gamelogger.rs  invert.rs  mod.rs  scorecard.rs  stackqueue.rs  threadpool.rs  workqueue.rs
src/util/gauntlet/: gamerunner.rs  generation.rs  mod.rs  pairing.rs  report.rs  webserver.rs
