[package]
name = "topsnek"
version = "0.2.0"
edition = "2021"

[lib]
name = "topsnek"

[[bin]]
name = "topsnek-server"

[[bin]]
name = "bench-spaceheater"

[[bin]]
name = "replay"

[[bench]]
name = "scoring"
harness = false

[profile.release]
debug = 1

[features]
default = []
logging = []
sequential = []
profiling = ["dep:pprof"]

[dependencies]
rouille = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.2"
html-escape = "0.2.11"
priority-queue = "1.2.3"
rand = "0.8.5"
sanitize-filename = "0.4.0"
num_cpus = "1.13.1"
itertools = "0.10.5"
flate2 = "1.0.24"
thread-priority = "0.10.0"
pprof = { version = "0.10", features = ["flamegraph"], optional = true }

[dev-dependencies]
criterion = "0.3"