[package]
name = "topsnek"
version = "0.2.0"
edition = "2021"

[lib]
name = "topsnek"

[[bin]]
name = "topsnek-server"

[[bin]]
name = "replay"

[[bin]]
name = "gauntlet"

[[bench]]
name = "scoring"
harness = false

[profile.release]
debug = 1

[features]
default = []
logging = []
sequential = []
profiling = ["dep:pprof"]

[dependencies]
rouille = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.2"
html-escape = "0.2.11"
priority-queue = "1.2.3"
rand = "0.8.5"
sanitize-filename = "0.4.0"
num_cpus = "1.13.1"
flate2 = "1.0.24"
pprof = { version = "0.11", features = ["flamegraph"], optional = true }
procinfo = "0.4.2"
rayon = "1.5"
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }